<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ExcellentChallenges</artifactId>
        <groupId>su.nightexpress.challengesrenewed</groupId>
        <version>3.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>Core</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>NMS</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>V1_18_R2</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>V1_19_R3</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>V1_20_R1</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>V1_20_R2</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.challengesrenewed</groupId>
            <artifactId>V1_20_R3</artifactId>
            <version>3.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory> <!-- (your resources folder location) -->
                <filtering>true
                </filtering> <!-- this is the important part, it's what replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <!-- Java 16 Fix -->
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.2</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-commons</artifactId>
                        <version>9.2</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.parent.basedir}\target\${project.parent.name}-Renewed-${project.version}.jar
                            </outputFile>
                            <artifactSet>
                                <includes>
                                    <include>su.nightexpress.challengesrenewed:*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>